Fix line-height property for headings to ensure consistent spacing

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Palatino Linotype", Palatino, sans-serif;
     font-weight: normal;
     border-bottom: 1px dotted #003F6F;
+    line-height: 1.2;
 }
 h1 {
     font-size: 2em;
